syntax = "proto3";

package proto;

option go_package = "github.com/neandermenezes/gRPC-Upvote-Service/proto";

import "google/protobuf/empty.proto";

message Post {
string id = 1;
string author_name = 2;
string title = 3;
string content = 4;
uint32 like_count = 5;
}

message PostId {
string id = 1;
}

service PostService {
rpc CreatePost (Post) returns (PostId);
rpc ReadPost (PostId) returns (Post);
rpc UpdatePost (Post) returns (google.protobuf.Empty);
rpc DeletePost (PostId) returns (google.protobuf.Empty);
rpc ListPosts (google.protobuf.Empty) returns (stream Post);
rpc UpvotePost (PostId) returns (google.protobuf.Empty);
}
